--- a/Teste/SiteDetran/css/folha.css
+++ b/Teste/SiteDetran/css/folha.css
@@ -16,11 +16,11 @@
     margin-top: 50px;
 }
 
-#topo{
-    display: inline;
-    width: 60vw;
-    height: 200px;
-    margin-right: 50px;
+.top{
+    display: inline-block;
+    background-image: url(/Teste/SiteDetran/img/detran.jpg);
+    width: 100%;
+    height: 20vh;
 }
 
 .text{
